# cmake-package-example

./: .gitignore  CMakeLists.txt
Boo/: CMakeLists.txt  boo.cpp
source/: Ba.hpp  Bar.cpp  Bar.hpp  Baz.cpp  Baz.hpp  CMakeLists.txt
source/Alpha/: Ba.hpp  Baz.cpp  CMakeLists.txt
source/Demo/: Ba.cpp  CMakeLists.txt
source/bar/: Bar.cpp  CMakeLists.txt
source/baz/: Baz.cpp  CMakeLists.txt
